[project]
name = "memory-mcp-server"
version = "1.0.0"
description = "MCP-compliant server for persistent hippocampus-style memory management"
authors = [{name = "Memory MCP Server", email = "noreply@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=2.0.0", 
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.0.0",
    "asyncio-contextmanager>=1.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
memory-mcp-server = "memory_mcp_server.server:main"